--- a/SuggestionAppUI/SuggestionAppUI.csproj
+++ b/SuggestionAppUI/SuggestionAppUI.csproj
@@ -6,4 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DataAccess\" />
+    <Folder Include="Models\" />
+    <Folder Include="Components\" />
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
