--- a/SuggestionAppUI/appsettings.json
+++ b/SuggestionAppUI/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseName": "devsuggestionapp",
+  "ConnectionStrings": {"MongoDB": "<Put Connection String Here>"} //the connectionstring here will be replaced by the string in secrets.json
 }
